--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@laravel/echo-vue": "^2.3.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
